PATCH/1.2 update readme, fix default date error, spamming checkdates and submit button, event name space error, add admin UI,refactor table on-hover bkg color in dark mode, add nav active button background color

--- a/src/components/event-list/filter-table.css
+++ b/src/components/event-list/filter-table.css
@@ -47,3 +47,6 @@ body{
 .table-selector {
     width: 3rem
 }
+.p-datatable.p-datatable-hoverable-rows .p-datatable-tbody > tr:not(.p-highlight):hover {
+    background-color: var(--table-hover-bg);
+}
